--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.4.3</version>
+        </dependency>
+
+
         <!-- spring -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -73,12 +80,16 @@
             <version>7.1</version>
         </dependency>
 
+        <!-- Twitter 4j -->
         <dependency>
             <groupId>org.twitter4j</groupId>
             <artifactId>twitter4j-core</artifactId>
             <version>3.0.3</version>
         </dependency>
+
+
     </dependencies>
+
     <build>
         <finalName>vento-service-rest</finalName>
         <plugins>
