--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,31 +4,32 @@
         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
         version="2.4">
 
-    <display-name>example</display-name>
+    <display-name>vento service rest</display-name>
 
-    <context-param>
+    <!-- Processes application requests -->
+    <servlet>
+        <servlet-name>appServlet</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>/WEB-INF/spring/applicationContext.xml</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>appServlet</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
+
+    <!--context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>WEB-INF/spring-context.xml</param-value>
+        <param-value>WEB-INF/spring/spring-context.xml</param-value>
     </context-param>
     <listener>
         <listener-class>
             org.springframework.web.context.ContextLoaderListener
         </listener-class>
-    </listener>
-
-    <!-- This listener will load other application context file in addition to
-            rest-servlet.xml -->
-
-    <servlet>
-        <servlet-name>rest</servlet-name>
-        <servlet-class>
-            org.springframework.web.servlet.DispatcherServlet
-        </servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>rest</servlet-name>
-        <url-pattern>/service/*</url-pattern>
-    </servlet-mapping>
+    </listener-->
 </web-app>
