--- a/pom.xml
+++ b/pom.xml
@@ -11,17 +11,38 @@
     <url>http://maven.apache.org</url>
 
     <dependencies>
-        <dependency>
+        <!-- testing -->
+        <!--dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>4.1</version>
+            <scope>test</scope>
+        </dependency-->
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring-version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.easymock</groupId>
+            <artifactId>easymock</artifactId>
+            <version>3.1</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- common libraries -->
 
         <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
             <version>1.4.3</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
         </dependency>
 
 
@@ -143,6 +164,6 @@
         <jetty-version>8.1.7.v20120910</jetty-version>
         <xbean-spring-version>3.5</xbean-spring-version>
         <groovy.version>2.0.0</groovy.version>
-        <spring-version>3.1.3.RELEASE</spring-version>
+        <spring-version>3.2.0.RELEASE</spring-version>
     </properties>
 </project>
