--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,14 @@
     <url>http://maven.apache.org</url>
 
     <dependencies>
+
+        <!-- Our dependencies -->
+        <dependency>
+            <groupId>org.vento.commons</groupId>
+            <artifactId>vento-models</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- testing -->
         <!--dependency>
             <groupId>junit</groupId>
@@ -33,7 +41,6 @@
         </dependency>
 
         <!-- common libraries -->
-
         <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
@@ -43,6 +50,17 @@
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
 
 
@@ -81,6 +99,14 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-oxm</artifactId>
             <version>${spring-version}</version>
+        </dependency>
+
+
+        <!-- persistence -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb</artifactId>
+            <version>1.2.1.RELEASE</version>
         </dependency>
 
 
@@ -165,5 +191,6 @@
         <xbean-spring-version>3.5</xbean-spring-version>
         <groovy.version>2.0.0</groovy.version>
         <spring-version>3.2.0.RELEASE</spring-version>
+        <jackson.version>2.0.4</jackson.version>
     </properties>
 </project>
