--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,25 @@
 
     <dependencies>
 
+        <!-- bloody loggging -->
+        <!-- logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.6.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.6.6</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- Our dependencies -->
         <dependency>
             <groupId>org.vento.commons</groupId>
