Refactor path, merged vento-live-gui and vento-api

--- a/src/main/resources/vento-service-rest.properties
+++ b/src/main/resources/vento-service-rest.properties
@@ -1,3 +1,14 @@
 gate.home=WEB-INF/gate-files
 gate.userFile=WEB-INF/gate-files/gate.xml
 gate.classification=WEB-INF/gate-files/gate-classification/batch-learning.classification.configuration.xml
+
+twitter.consumerKey=w3zDwOxm83TMRLtfOBe7I5w1D
+twitter.consumerSecret=DngraeF7Ywyl7TZjl9g3wC7fDfjqNAUH5upIQzFCjbOzSvZ33v
+twitter.accessToken=2927582674-b3UNiCAKLMyg325iVCKjzAmlBvZlvFYECwojMb4
+twitter.accessTokenSecret=gfSyylNVJDUxolpzmgOW7N7jaXDY2bCN4vNzTgvm1Wjlz
+
+storage.mongo.host=ds031747.mongolab.com
+storage.mongo.port=31747
+storage.mongo.db=heroku_app10645215
+storage.mongo.username=grails
+storage.mongo.password=bao123
