--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>vento-service-rest</groupId>
-    <artifactId>vento-service-rest</artifactId>
+    <groupId>org.vento</groupId>
+    <artifactId>vento-live</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>vento-service-rest Maven Webapp</name>
-    <url>http://maven.apache.org</url>
+    <name>Vento Live service</name>
 
     <dependencies>
 
@@ -113,11 +112,11 @@
             <artifactId>spring-webmvc</artifactId>
             <version>${spring-version}</version>
         </dependency>
-        <!--dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-oxm</artifactId>
+            <artifactId>spring-aspects</artifactId>
             <version>${spring-version}</version>
-        </dependency-->
+        </dependency>
 
 
         <!-- persistence -->
@@ -163,7 +162,7 @@
     </dependencies>
 
     <build>
-        <finalName>vento-service-rest</finalName>
+        <finalName>vento-live</finalName>
         <plugins>
 
             <plugin>
@@ -185,9 +184,9 @@
             </plugin>
 
             <plugin>
-                <groupId>org.mortbay.jetty</groupId>
+                <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-                <version>${jetty-version}</version>
+                <version>9.3.0.M1</version>
 
                 <configuration>
                     <stopKey/>
@@ -198,10 +197,10 @@
 
                     <systemProperties>
                         <!-- enable easy JMX connection to JConsole -->
-                        <systemProperty>
-                            <name>com.sun.management.jmxremote</name>
-                            <value/>
-                        </systemProperty>
+                        <!--<systemProperty>-->
+                            <!--<name>com.sun.management.jmxremote</name>-->
+                            <!--<value/>-->
+                        <!--</systemProperty>-->
                     </systemProperties>
                     <scanIntervalSeconds>0</scanIntervalSeconds>
                 </configuration>
@@ -233,13 +232,21 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.4.3</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
     <properties>
         <camel.version>2.11.0</camel.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jetty-version>8.1.7.v20120910</jetty-version>
         <xbean-spring-version>3.5</xbean-spring-version>
         <groovy.version>2.0.0</groovy.version>
         <spring-version>3.2.0.RELEASE</spring-version>
