--- a/src/main/webapp/WEB-INF/gate-files/plugins/Learning/build.xml
+++ b/src/main/webapp/WEB-INF/gate-files/plugins/Learning/build.xml
@@ -42,10 +42,10 @@
 	<!-- Sources -->
 	<property name="srcDir" location="src" />
 
-	<!-- Output directory for the build process -->
+	<!-- Output directory for the build classify -->
 	<property name="buildDir" location="build" />
 
-	<!-- Libraries directory for the build process -->
+	<!-- Libraries directory for the build classify -->
 	<property name="libDir" location="lib" />
 
 	<!-- Directory for the documentation -->
