Fixed the GATE classifier, starting adding feature extraction and text processing

--- a/src/main/resources/vento-service-rest.properties
+++ b/src/main/resources/vento-service-rest.properties
@@ -7,8 +7,8 @@ twitter.consumerSecret=DngraeF7Ywyl7TZjl9g3wC7fDfjqNAUH5upIQzFCjbOzSvZ33v
 twitter.accessToken=2927582674-b3UNiCAKLMyg325iVCKjzAmlBvZlvFYECwojMb4
 twitter.accessTokenSecret=gfSyylNVJDUxolpzmgOW7N7jaXDY2bCN4vNzTgvm1Wjlz
 
-storage.mongo.host=ds031747.mongolab.com
-storage.mongo.port=31747
-storage.mongo.db=heroku_app10645215
-storage.mongo.username=grails
-storage.mongo.password=bao123
+storage.mongo.host=localhost
+storage.mongo.port=27017
+storage.mongo.db=ventoLive
+storage.mongo.username=
+storage.mongo.password=
