--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,9 @@
             <version>1.6.6</version>
         </dependency>
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.13.1</version>
             <scope>runtime</scope>
         </dependency>
 
